# cs510-comp-sound

./: .gitignore  Cargo.toml  README.md  deb_clai.aac
19spring/comp-music-510/proj/: Cargo.toml  IMPL.md  README.md
19spring/comp-music-510/proj/midi/: README.md
19spring/comp-music-510/proj/norm/: DOC.md  pg.py
19spring/comp-music-510/proj/samples/: README.md  down-all.py
19spring/comp-music-510/proj/src/: lib.rs  main.rs  midisyn.rs  playback.rs  sample_reader.rs  soundprim.rs
19spring/comp-music-510/proj/src/instr/: piano.rs  sine.rs
doc/: proposal.tex  write-up.tex
midi/: LICENSE
norm/: pg.py
output/: deb_clai.aac
samples/: mispiano.html  to-wav.sh
samples/normed/: A1.ff.flac  A1.mf.flac  A1.pp.flac  A2.ff.flac  A2.mf.flac  A2.pp.flac  A3.ff.flac  A3.mf.flac  A3.pp.flac  A4.ff.flac  A4.mf.flac  A4.pp.flac  A5.ff.flac  A5.mf.flac  A5.pp.flac  A6.ff.flac  A6.mf.flac  A6.pp.flac  A7.ff.flac  A7.mf.flac  A7.pp.flac  Ab1.ff.flac  Ab1.mf.flac  Ab1.pp.flac  Ab2.ff.flac  Ab2.mf.flac  Ab2.pp.flac  Ab3.ff.flac  Ab3.mf.flac  Ab3.pp.flac  Ab4.ff.flac  Ab4.mf.flac  Ab4.pp.flac  Ab5.ff.flac  Ab5.mf.flac  Ab5.pp.flac  Ab6.ff.flac  Ab6.mf.flac  Ab6.pp.flac  Ab7.ff.flac  (+211 more)
src/: geniter.rs  lib.rs  midisyn.rs  playback.rs  sample_reader.rs  soundprim.rs  streamop.rs  types.rs  writer.rs
src/instr/: mod.rs  piano.rs
